--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,13 @@
 <html>
 	<head>
 		<title>CMYK Translator</title>
+                <meta charset="utf-8">
+                <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 	</head>
 	<body>
 		<h1>CMYK Decomposer</h1>
-		<h2>Select Image </h2>
                 <p><b>Client_ID: </b>{{client_id}}</p>
 		<form method = "POST" action="" enctype="multipart/form-data">
 			<p><input type="file" name="file" accept="image/*"></p>
