--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,10 @@
 			<p><input type="file" name="file" accept="image/*"></p>
 			<p><input type="submit" value="Submit"></p>
 		</form>
-
+                
+                <hr>
+                    {% set client = client_id %}
+                      <img src="{{ url_for('get_image_s',clientid=client) }}" style="width: 150px">
 	</body>
 </html>
 
