image uploading and specifying layer successful

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 
                 <hr>
                     {% set client = client_id %}
-                      <img src="{{ url_for('get_image_s',clientid=client) }}" style="width: 150px">
+                      <img src="{{ url_for('get_image_s',clientid=client,layer='C') }}" style="width: 150px">
 	</body>
 </html>
 
