added displaying of the 4 images

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,9 @@
                 <hr>
                     {% set client = client_id %}
                       <img src="{{ url_for('get_image_s',clientid=client,layer='C') }}" style="width: 150px">
+                      <img src="{{ url_for('get_image_s',clientid=client,layer='M') }}" style="width: 150px">
+                      <img src="{{ url_for('get_image_s',clientid=client,layer='Y') }}" style="width: 150px">
+                      <img src="{{ url_for('get_image_s',clientid=client,layer='K') }}" style="width: 150px">
 	</body>
 </html>
 
